--- a/styles/style.css
+++ b/styles/style.css
@@ -340,30 +340,33 @@
 }
 
 .footer {
+  display: flex;
   box-sizing: border-box;
   background-color: #1f1f1f;
   color: #ffffff;
+  padding: 60px 80px;
+}
+
+.footer__cover {
+  width: 100%;
+  position: relative;
 }
 
 .footer__columns {
-  padding: 60px 80px;
   display: flex;
   justify-content: space-between;
-  align-items: flex-start;
-  flex-wrap: wrap;
 }
-.footer__column {
-  display: flex;
-  flex-direction: column;
-  column-gap: 80px;
-}
-.footer__logo-wrapper {
-  flex-basis: 850px;
-}
+
 .footer__column_content_hours {
+  font-size: 16px;
+  position: absolute;
+  right: 240px;
+  margin-left: auto;
 }
 
 .footer__column_content_social {
+  font-size: 16px;
+  margin-left: 80px;
 }
 
 .footer__logo {
@@ -373,7 +376,8 @@
 
 .footer__column-heading {
   font-size: 16px;
-  padding-bottom: 4px;
+  margin-top: 0;
+  margin-bottom: 20px;
 }
 
 .footer__list {
@@ -383,20 +387,26 @@
 }
 
 .footer__list-item {
+  display: flex;
+  flex-wrap: wrap;
   padding-top: 16px;
 }
 
 .footer__column-link {
   color: white;
   text-decoration: none;
+  align-items: center;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
   padding-right: 10px;
+  padding-bottom: 0;
 }
 
 .footer__copyright {
-  padding-top: 100px;
+  margin-top: 100px;
+  margin-bottom: 0;
+  font-size: 14px;
 }
