--- a/styles/style.css
+++ b/styles/style.css
@@ -393,6 +393,8 @@
 }
 
 .footer__column-link {
+  display: flex;
+  column-gap: 10px;
   color: white;
   text-decoration: none;
   align-items: center;
